// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadRowHeader should render confirmation on delete all 1`] = `"{}"`;

exports[`Component FileUploadRowHeader should render with access condition and embargo date column 1`] = `
<Hidden
  implementation="js"
  lgDown={false}
  lgUp={false}
  mdDown={false}
  mdUp={false}
  only={
    Array [
      "xs",
    ]
  }
  smDown={false}
  smUp={false}
  xlDown={false}
  xlUp={false}
  xsDown={false}
  xsUp={false}
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all files?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <div
    style={
      Object {
        "flexGrow": 1,
        "padding": 4,
      }
    }
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      direction="row"
      gutter={8}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        md={6}
        sm={5}
      >
        <WithStyles(Typography)
          gutterBottom={true}
          variant="caption"
        >
          Filename
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={3}
        sm={4}
      >
        <WithStyles(Typography)
          gutterBottom={true}
          variant="caption"
        >
          Access conditions
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={2}
        sm={2}
      >
        <WithStyles(Typography)
          gutterBottom={true}
          variant="caption"
        >
          Embargo release date
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        className=""
        item={true}
        xs={1}
      >
        <WithStyles(Tooltip)
          title="Remove all files from the upload queue"
        >
          <WithStyles(IconButton)
            onClick={[Function]}
          >
            <pure(DeleteForeverIcon) />
          </WithStyles(IconButton)>
        </WithStyles(Tooltip)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </div>
</Hidden>
`;

exports[`Component FileUploadRowHeader should render with default setup 1`] = `
<Hidden
  implementation="js"
  lgDown={false}
  lgUp={false}
  mdDown={false}
  mdUp={false}
  only={
    Array [
      "xs",
    ]
  }
  smDown={false}
  smUp={false}
  xlDown={false}
  xlUp={false}
  xsDown={false}
  xsUp={false}
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all files?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <div
    style={
      Object {
        "flexGrow": 1,
        "padding": 4,
      }
    }
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      direction="row"
      gutter={8}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        md={6}
        sm={5}
      >
        <WithStyles(Typography)
          gutterBottom={true}
          variant="caption"
        >
          File name
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={3}
        sm={4}
      >
        <WithStyles(Typography)
          gutterBottom={true}
          variant="caption"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={2}
        sm={2}
      >
        <WithStyles(Typography)
          gutterBottom={true}
          variant="caption"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        className=""
        item={true}
        xs={1}
      >
        <WithStyles(Tooltip)
          title="Remove all files from the upload queue"
        >
          <WithStyles(IconButton)
            onClick={[Function]}
          >
            <pure(DeleteForeverIcon) />
          </WithStyles(IconButton)>
        </WithStyles(Tooltip)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </div>
</Hidden>
`;

exports[`Component FileUploadRowHeader should render without access condition even if requireAccessCondition true but default access condition is provided 1`] = `
<Hidden
  implementation="js"
  lgDown={false}
  lgUp={false}
  mdDown={false}
  mdUp={false}
  only={
    Array [
      "xs",
    ]
  }
  smDown={false}
  smUp={false}
  xlDown={false}
  xlUp={false}
  xsDown={false}
  xsUp={false}
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete all files?",
        "confirmationTitle": "Delete all",
      }
    }
    onAction={[MockFunction]}
    onRef={[Function]}
  />
  <div
    style={
      Object {
        "flexGrow": 1,
        "padding": 4,
      }
    }
  >
    <WithStyles(Grid)
      alignItems="center"
      container={true}
      direction="row"
      gutter={8}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        md={6}
        sm={5}
      >
        <WithStyles(Typography)
          gutterBottom={true}
          variant="caption"
        >
          Filename
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={3}
        sm={4}
      >
        <WithStyles(Typography)
          gutterBottom={true}
          variant="caption"
        >
          Access conditions
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={2}
        sm={2}
      >
        <WithStyles(Typography)
          gutterBottom={true}
          variant="caption"
        >
          Embargo release date
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        className=""
        item={true}
        xs={1}
      >
        <WithStyles(Tooltip)
          title="Remove all files from the upload queue"
        >
          <WithStyles(IconButton)
            onClick={[Function]}
          >
            <pure(DeleteForeverIcon) />
          </WithStyles(IconButton)>
        </WithStyles(Tooltip)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </div>
</Hidden>
`;
